--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ots",
   "version": "0.1.0",
-  "homepage": "https://kientran1-tiki.github.io/orders-tracking-system",
+  "homepage": "https://kientran1-tiki.github.io/ots",
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.4.3",
@@ -34,8 +34,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "craco build",
-    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b main -d build",
     "start": "craco start",
     "build": "craco build",
     "test": "react-scripts test",
