--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ots",
   "version": "0.1.0",
-  "homepage": "https://kientran1-tiki.github.io/ots",
+  "homepage": "https://kientran1-tiki.github.io/orders-tracking-system",
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.4.3",
